--- a/src/classes/PSRecordSearchController.cls
+++ b/src/classes/PSRecordSearchController.cls
@@ -3,6 +3,12 @@ global class PSRecordSearchController {
 		
 	}
 
+	@AuraEnabled
+    public static String descSearchField(String objtype, String searchField) {
+
+        return(PSMetaUtils.getSingleFieldDesc(objtype, searchField));
+    }
+
     @AuraEnabled
     public static List<SObject> query(String queryStr) {
         System.debug('queryStr=' + queryStr);
